<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".activity.MainActivity">

    <LinearLayout
        android:id="@+id/main_status_bar"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="70dp">
        //Image of head
        //??
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/main_head"
            android:src="@drawable/ic_account"
            android:layout_marginStart="15dp"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        //Search box
        <RelativeLayout
            android:id="@+id/main_search"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="10dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_width="match_parent"
            android:background="@drawable/bg_ripple_search"
            android:layout_height="40dp">
            //Search icon
            <ImageView
                android:id="@+id/main_bar_search_image"
                android:src="@drawable/ic_search"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:layout_width="18dp"
                android:layout_height="18dp" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:id="@+id/main_divider"
        android:layout_below="@id/main_status_bar"
        android:background="@color/colorLine"
        android:layout_width="match_parent"
        android:layout_height="0.8dp" >

    </View>

    <LinearLayout
        android:id="@+id/main_categories"
        android:layout_below="@id/main_divider"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="75dp">
        <LinearLayout
            android:background="@drawable/bg_ripple_white"
            android:clickable="true"
            android:gravity="center"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true">
            <ImageView
                android:src="@drawable/ic_cars"
                android:layout_width="35dp"
                android:layout_height="35dp"
                fab:tint="@color/colorAccent" />
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/colorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_cars_and_vehicles" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_ripple_white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true">
            <ImageView
                android:src="@drawable/ic_home"
                android:layout_width="35dp"
                android:layout_height="35dp"
                fab:tint="@color/colorAccent" />
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/colorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_home_and_garden" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_ripple_white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true">
            <ImageView
                android:gravity="center"
                android:src="@drawable/ic_phone"
                android:layout_width="35dp"
                android:layout_height="35dp"
                fab:tint="@color/colorAccent" />
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/colorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_electronics" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_ripple_white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true">
            <ImageView
                android:src="@drawable/ic_sport"
                fab:tint="@color/colorAccent"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/colorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_sport_and_fitness" />
        </LinearLayout>
        <LinearLayout
            android:background="@drawable/bg_ripple_white"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true">
            <ImageView
                android:src="@drawable/ic_menu"
                fab:tint="@color/colorAccent"
                android:layout_width="35dp"
                android:layout_height="35dp" />
            <TextView
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@color/colorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_more" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/main_divider_1"
        android:layout_below="@id/main_categories"
        android:background="@color/colorLine"
        android:layout_width="match_parent"
        android:layout_height="0.8dp" >

    </View>

    //??
    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/main_refresh"
        android:background="#F1F1F1"
        android:layout_below="@id/main_divider_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        //RecyclerView
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/main_list_recycler"
            android:layout_width="match_parent"
            android:overScrollMode="never"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"
            android:paddingTop="5dp"
            android:layout_height="match_parent">
        </androidx.recyclerview.widget.RecyclerView>
    </com.scwang.smartrefresh.layout.SmartRefreshLayout>

    //Plus icon
    <com.getbase.floatingactionbutton.FloatingActionsMenu
        android:id="@+id/multiple_actions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        fab:fab_addButtonColorNormal="@color/colorAccent"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="30dp">

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccentPress"
            fab:fab_title="Demo1" />

        <com.getbase.floatingactionbutton.FloatingActionButton
            android:id="@+id/action_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            fab:fab_colorNormal="@color/colorAccentPress"
            fab:fab_title="Demo2" />
    </com.getbase.floatingactionbutton.FloatingActionsMenu>

</RelativeLayout>